--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="icon" type="image/x-icon" href="icon.jpg">
-    <link rel="stylesheet" href="links.css">
+    <link rel="stylesheet" href="about.css">
     <title>Fracked</title>
     <script src="https://kit.fontawesome.com/e40d1a93d8.js" crossorigin="anonymous"></script>
 </head> 
