--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="icon" type="image/x-icon" href="icon.jpg">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="home.css">
     <title>Fracked</title>
     <script src="https://kit.fontawesome.com/e40d1a93d8.js" crossorigin="anonymous"></script>
 </head> 
@@ -25,14 +25,20 @@
     <div class="row">
     <div class="column">
         Going to court, filing legal paperwork are already daunting enough tasks without
-        the stress that usually precedes and persists going through this process. <br>
+        the stress that usually precedes and persists going through this process. <br><br>
         I am not an Attorney nor a Paralegal, this information is just presented as is from
-        personal experience and research I've done to try and navigate this process. <br>
+        personal experience and research I've done to try and navigate this process. <a href="about.html">
+        I'm just a grumpy man with a cat.</a> <br>
         Please do not take anything from this page as legal advice.<br><br>
         There are a number of free resources out there that can be used to prepare legal documents.
-        I have links on the <a href="links.html">Resources</a>page as well as an explaination of what 
+        I have links on the <a href="links.html">Resources</a> page as well as an explaination of what 
         each site brings to the table. There is some ridiculous legal speak out there which seems like
-        it is there just to confuse you. I've tried to unpack some of this in the <a href="jargon.html">Jargon</a> page.
+        it is there just to confuse you. I've tried to unpack some of this in the <a href="jargon.html">Jargon</a> page. <br>
+        There is no money for an Attorney to make representing someone in family law unless they see a way to 
+        take from the other party in the marriage and as such, you will probably not find a Lawyer as the
+        bread winner in a family unless you have around 10 thousand dollars to put down as a retainer. <br>
+        Surprise! If you are in this situation, you will not qualify for representation "pro bono" or
+        a public defender.
     </div>
     <div class="column1">
         <img src="img/cattorney.png" alt="Meow" class="responsive">
