--- a/jargon.html
+++ b/jargon.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="icon" type="image/x-icon" href="icon.jpg">
-    <link rel="stylesheet" href="links.css">
+    <link rel="stylesheet" href="jargon.css">
     <title>Fracked</title>
     <script src="https://kit.fontawesome.com/e40d1a93d8.js" crossorigin="anonymous"></script>
 </head> 
@@ -23,24 +23,24 @@
 <body>
   <section>
     <article>
-Here are some definitions of legal terms:
-<ul>
-<li>Acquittal: A verdict of not guilty, resulting in the release of the defendant </li>
-<li>Adjournment: A postponement of a case to a later date</li>
-<li>Adjudication: The legal process of resolving a dispute</li>
-<li>Advocate: A legal representative, such as a barrister or solicitor, who represents a party in court </li>
-<li>Affidavit: A written statement of facts that is sworn to by the affiant under oath </li>
-<li>Affirmation: A declaration made by a witness who cannot take an oath </li>
-<li>Answer: A pleading filed by the defendant in a civil case to respond to the plaintiff's claims </li>
-<li>Damages: Compensation paid to a successful plaintiff by the defendant in a civil case </li>
-<li>Defendant: The person, company, or organization that is being sued by the plaintiff </li>
-<li>Injunction: A court order that requires or prohibits a party from doing something </li>
-<li>Rescission: The cancellation of a contract, usually due to fraud or a material breach </li>
-<li>Declaratory Judgment: A court's determination of the legal obligations and rights of the parties involved in a situation </li>
-<li>Deferred sentence: A criminal proceeding where the punishment is postponed to a later date </li>
-<li>Alimony: Money paid by one spouse to another during or after a divorce or separation </li>
-<li>Alternative dispute resolution: A method of settling a dispute without a formal trial, such as arbitration, mediation, or conciliation </li>
-</ul>    
+      Here are some definitions of legal terms:
+      <ul>
+        <li>Acquittal: A verdict of not guilty, resulting in the release of the defendant </li>
+        <li>Adjournment: A postponement of a case to a later date</li>
+        <li>Adjudication: The legal process of resolving a dispute</li>
+        <li>Advocate: A legal representative, such as a barrister or solicitor, who represents a party in court </li>
+        <li>Affidavit: A written statement of facts that is sworn to by the affiant under oath </li>
+        <li>Affirmation: A declaration made by a witness who cannot take an oath </li>
+        <li>Answer: A pleading filed by the defendant in a civil case to respond to the plaintiff's claims </li>
+        <li>Damages: Compensation paid to a successful plaintiff by the defendant in a civil case </li>
+        <li>Defendant: The person, company, or organization that is being sued by the plaintiff </li>
+        <li>Injunction: A court order that requires or prohibits a party from doing something </li>
+        <li>Rescission: The cancellation of a contract, usually due to fraud or a material breach </li>
+        <li>Declaratory Judgment: A court's determination of the legal obligations and rights of the parties involved in a situation </li>
+        <li>Deferred sentence: A criminal proceeding where the punishment is postponed to a later date </li>
+        <li>Alimony: Money paid by one spouse to another during or after a divorce or separation </li>
+        <li>Alternative dispute resolution: A method of settling a dispute without a formal trial, such as arbitration, mediation, or conciliation </li>
+      </ul>    
 </article>
   </section>
     <script>
