--- a/about.html
+++ b/about.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <link rel="icon" type="image/x-icon" href="icon.jpg">
-    <link rel="stylesheet" href="about.css">
-    <title>Fracked</title>
-    <script src="https://kit.fontawesome.com/e40d1a93d8.js" crossorigin="anonymous"></script>
-</head> 
-<header> 
-    <div class="topbar_container">
-        <div class="logo" id="pageTop"> <img src="img/jeff.png" alt="Jeffery Clawmer"> </div></a> 
-            <a class="bar" href="javascript:void(0);" class="icon" onclick="myFunction()"> <i class="fa fa-bars"></i></a>
-        <nav id="nav">
-        <ul>
-            <li class="nav"><a href="index.html">Home</a></li>
-            <li class="nav"><a href="links.html">Resources</a></li>
-            <li class="nav"><a href="about.html">About</a></li>
-            <li class="nav"><a href="jargon.html">Jargon</a></li>
-        </ul>
-        </nav>
-    </div>        
+  <link rel="icon" type="image/x-icon" href="icon.jpg">
+  <link rel="stylesheet" href="css/about.css">
+  <title>JSRR</title>
+  <script src="https://kit.fontawesome.com/e40d1a93d8.js" crossorigin="anonymous"></script>
+</head>
+<header>
+  <div class="topbar_container">
+    <div class="logo" id="pageTop"> <img src="img/jeff1.png" alt="Jeffery Clawmer"> </div>
+    <a class="bar" href="javascript:void(0);" onclick="myFunction()"> <i class="fa fa-bars"></i></a>
+    <nav id="nav">
+      <ul>
+        <li class="nav"><a href="index.html">Home</a></li>
+        <li class="nav"><a href="links.html">Resources</a></li>
+        <li class="nav"><a href="about.html">About</a></li>
+        <li class="nav"><a href="jargon.html">Jargon</a></li>
+      </ul>
+    </nav>
+  </div>
 </header>
+
 <body>
-    <section>
-      <article>
+  <section>
+    <article>
       My name is Sam Henninger, I'm the creator of this site. Along with my associate Mr. Jeffery Clawmer.
       He is the real taskmaster of this operation. He is in charge of meal breaks, making sure I am on time
       for work and class and ensuring I find time to sleep.
       <img src="img/webmasters.jpg" class="responsive" alt="">
     </article>
     <article>
-      In the field.
-      <img src="img/inthefield.jpg" class="responsive" alt="">
-    </article>
-    <article>
       Even from his office, he can watch me at all times.
       <img src="img/glasshouse.jpg" alt="">
+      In the field.
+      <img src="img/inthefield.jpg" class="responsive" alt="">
     </article>
     <article>
       And why the website:
       <img src="img/whythewebsite.jpg" alt="">
     </article>
-    </section>
-    <script>
+  </section>
+  <script>
     function myFunction() {
       var x = document.getElementById("nav");
       if (x.style.display === "none") {
@@ -50,6 +50,11 @@
         x.style.display = "none";
       }
     }
-    </script>
-    </body>
-    </html>
+  </script>
+</body>
+<footer>
+  <br><a href="#">Return to Top</a><br>
+  Author: Sam Henninger 2024 <a href="contact.html" target="_blank">Contact Us</a>
+</footer>
+
+</html>
