--- a/index.html
+++ b/index.html
@@ -1,58 +1,69 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="icon" type="image/x-icon" href="icon.jpg">
-    <link rel="stylesheet" href="home.css">
-    <title>Fracked</title>
+    <link rel="stylesheet" href="css/home.css">
+    <title>JSRR</title>
     <script src="https://kit.fontawesome.com/e40d1a93d8.js" crossorigin="anonymous"></script>
-</head> 
-<header> 
+</head>
+<header>
     <div class="topbar_container">
-        <div class="logo" id="pageTop"> <img src="img/jeff.png" alt="Jeffery Clawmer"> </div></a> 
-            <a class="bar" href="javascript:void(0);" class="icon" onclick="myFunction()"> <i class="fa fa-bars"></i></a>
+        <div class="logo" id="pageTop"> <img src="img/jeff1.png" alt="Jeffery Clawmer"> </div>
+        <a class="bar" href="javascript:void(0);" onclick="myFunction()"> <i class="fa fa-bars"></i></a>
         <nav id="nav">
-        <ul>
-            <li class="nav"><a href="index.html">Home</a></li>
-            <li class="nav"><a href="links.html">Resources</a></li>
-            <li class="nav"><a href="about.html">About</a></li>
-            <li class="nav"><a href="jargon.html">Jargon</a></li>
-        </ul>
+            <ul>
+                <li class="nav"><a href="index.html">Home</a></li>
+                <li class="nav"><a href="links.html">Resources</a></li>
+                <li class="nav"><a href="about.html">About</a></li>
+                <li class="nav"><a href="jargon.html">Jargon</a></li>
+            </ul>
         </nav>
-    </div>        
+    </div>
 </header>
+
 <body>
-    <h1>Navigating Familiy Law in Kitsap County<br>without an Attorney</h1>
-    <div class="row">
-    <div class="column">
-        Going to court, filing legal paperwork are already daunting enough tasks without
-        the stress that usually precedes and persists going through this process. <br><br>
-        I am not an Attorney nor a Paralegal, this information is just presented as is from
-        personal experience and research I've done to try and navigate this process. <a href="about.html">
-        I'm just a grumpy man with a cat.</a> <br>
-        Please do not take anything from this page as legal advice.<br><br>
-        There are a number of free resources out there that can be used to prepare legal documents.
-        I have links on the <a href="links.html">Resources</a> page as well as an explaination of what 
-        each site brings to the table. There is some ridiculous legal speak out there which seems like
-        it is there just to confuse you. I've tried to unpack some of this in the <a href="jargon.html">Jargon</a> page. <br>
-        There is no money for an Attorney to make representing someone in family law unless they see a way to 
-        take from the other party in the marriage and as such, you will probably not find a Lawyer as the
-        bread winner in a family unless you have around 10 thousand dollars to put down as a retainer. <br>
-        Surprise! If you are in this situation, you will not qualify for representation "pro bono" or
-        a public defender.
-    </div>
-    <div class="column1">
-        <img src="img/cattorney.png" alt="Meow" class="responsive">
-    </div>
-</div>
+    <h1>Navigating Familiy Law in Kitsap County without an Attorney</h1>
+    <section>
+        <article>
+            Going to court, filing legal paperwork are already daunting enough tasks without
+            the stress that usually precedes and persists going through this process. I've tried to compile the basic
+            information needed to disolve a marriage or domestic partnership here.<br><br>
+            I am not an Attorney nor a Paralegal, this information is just presented as is from
+            personal experience and research I've done to try and navigate this process. <a href="about.html">
+                I'm just a grumpy man with a cat.</a> <br>
+            Please do not take anything from this page as legal advice.<br><br>
+            There are a number of free resources out there that can be used to prepare legal documents.
+            I have links on the <a href="links.html">Resources</a> page as well as an explaination of what
+            each site brings to the table. There is some ridiculous legal speak out there which seems like
+            it is there just to confuse you. I've tried to unpack some of this in the <a href="jargon.html">Jargon</a>
+            page. <br>
+            You can save yourself a lot of money with a little bit of leg work and a basic understanding of court rules
+            and procedings. <a href="https://www.kitsap.gov/sc/Documents/Kitsap_County_Local_Court_Rules.pdf"
+                target="_blank">An exhaustive list of court rules</a> in Kitsap County is available. <br>
+            For those that qualify <a href="https://kitsaplegalaid.org/" target="_blank">Kitsap Legal Aid Services</a>
+            is a good resource.<br>
+            While there is an <a
+                href="https://kitsap.sharepoint.com/sites/SuperiorCourtExt/Shared%20Documents/Forms/AllItems.aspx?id=%2Fsites%2FSuperiorCourtExt%2FShared%20Documents%2FWebsite%20Letters%20to%20public%2Fefilewa%20letter%2Epdf&parent=%2Fsites%2FSuperiorCourtExt%2FShared%20Documents%2FWebsite%20Letters%20to%20public&p=true&ga=1"
+                target="_blank">E-File
+                System</a> in Kitsap Country, you must file bench copies in person so you won't save a trip to the court
+            house.
+        </article>
+    </section>
     <script>
-    function myFunction() {
-      var x = document.getElementById("nav");
-      if (x.style.display === "none") {
-        x.style.display = "block";
-      } else {
-        x.style.display = "none";
-      }
-    }
+        function myFunction() {
+            var x = document.getElementById("nav");
+            if (x.style.display === "none") {
+                x.style.display = "block";
+            } else {
+                x.style.display = "none";
+            }
+        }
     </script>
-    </body>
-    </html>
+</body>
+<footer>
+    <br><a href="#">Return to Top</a><br>
+    Author: Sam Henninger 2024 <a href="contact.html" target="_blank">Contact Us</a>
+</footer>
+
+</html>
