--- a/links.html
+++ b/links.html
@@ -1,63 +1,126 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link rel="icon" type="image/x-icon" href="icon.jpg">
-    <link rel="stylesheet" href="links.css">
-    <title>Fracked</title>
-    <script src="https://kit.fontawesome.com/e40d1a93d8.js" crossorigin="anonymous"></script>
-</head>
-<header> 
-  <div class="topbar_container">
-      <div class="logo" id="pageTop"> <img src="img/jeff.png" alt="Jeffery Clawmer"> </div>
-          <a class="bar" href="javascript:void(0);" class="icon" onclick="myFunction()"> <i class="fa fa-bars"></i></a>
-      <nav id="nav">
-      <ul>
-          <li class="nav"><a href="index.html">Home</a></li>
-          <li class="nav"><a href="links.html">Resources</a></li>
-          <li class="nav"><a href="about.html">About</a></li>
-          <li class="nav"><a href="jargon.html">Jargon</a></li>
-      </ul>
-      </nav>
-  </div>        
-</header>
-<div class="content">
-  <section>
-    <article>
-      There are a number of great resources out here for us here in washington state. There are some differences 
-      in process in Kitsap County however.
-    </article>
-    <article>
-      Probably one of the best resources is <a href="https://www.washingtonlawhelp.org/">WA Law Help</a> their page on
-       <a href="https://www.washingtonlawhelp.org/issues/family-law">Family Law</a> is particularly useful.
 
-    </article>
-    <article>
-      For the most up to date forms the best place is of course the source: 
-      <a href="https://www.courts.wa.gov/forms/?fa=forms.contribute&formID=13">Courts.wa.gov/forms</a> all of the up to date
-      forms are here for download in both Microsoft Word and Adobe PDF forms.
-    </article>
-    <article>
-      placeholder
-      <img src="img/catcourt.png" alt="">
-    </article>
-    <article>
-      placeholder2
-      <img src="img/catcourt1.png" alt="">
-    </article>
-    <article>
-      placeholder3
-      <img src="img/jeff.jpg" alt="">
-    </article>
-  </section>
+<head>
+  <link rel="icon" type="image/x-icon" href="icon.jpg">
+  <link rel="stylesheet" href="css/links.css">
+  <title>JSRR</title>
+  <script src="https://kit.fontawesome.com/e40d1a93d8.js" crossorigin="anonymous"></script>
+</head>
+<header>
+  <div class="topbar_container">
+    <div class="logo" id="pageTop"> <img src="img/jeff1.png" alt="Jeffery Clawmer"> </div>
+    <a class="bar" href="javascript:void(0);" onclick="myFunction()"> <i class="fa fa-bars"></i></a>
+    <nav id="nav">
+      <ul>
+        <li class="nav"><a href="index.html">Home</a></li>
+        <li class="nav"><a href="links.html">Resources</a></li>
+        <li class="nav"><a href="about.html">About</a></li>
+        <li class="nav"><a href="jargon.html">Jargon</a></li>
+      </ul>
+    </nav>
   </div>
-    <script>
-    function myFunction() {
-      var x = document.getElementById("nav");
-      if (x.style.display === "none") {
-        x.style.display = "block";
-      } else {
-        x.style.display = "none";
-      }
+</header>
+<section>
+  <h1>
+    There are a number of great resources out here for us here in Washington State. Probably one of the best resources
+    is
+    <a href="https://www.washingtonlawhelp.org/" target="_blank">WA Law Help</a> their page on <a
+      href="https://www.washingtonlawhelp.org/issues/family-law" target="_blank">Family Law</a> is particularly useful.
+    For the most up to date forms the best place is of course the source:<a
+      href="https://www.courts.wa.gov/forms/?fa=forms.contribute&formID=13" target="_blank">Courts.wa.gov/forms</a> all
+    of the up to
+    date
+    forms are here for download in both Microsoft Word and Adobe PDF forms.<br>
+  </h1>
+  <article>
+    The first piece of advice that I have when it comes to court is this: be the person that files first. Even if you
+    are not the person who is primarily pushing for dissolution of a marriage or relationship, File first. You are at
+    a serious disadvantage if the other party files before you do. What next? at a minimum 2 forms. <br>
+    <a href="https://www.courts.wa.gov/forms/documents/FL%20Divorce%20200%20Summons%202022%2001%20(2).pdf"
+      target="_blank">FL Divorce
+      200</a>
+    which is a formal summons about any of 5 actions to break a partnership or marriage. This gives the other party 20
+    days from the date
+    paperwork is served to them to respond in writing. 60 days if out of state. BOTH to the person who started this
+    action "Petitioner" and file with the court.
+    and <a
+      href="https://www.courts.wa.gov/forms/documents/FL%20Divorce%20201%20Petition%20for%20Divorce_2023%2001%20(2).pdf"
+      target="_blank">
+      FL divorce 201</a>
+    which is the "meat and potatoes" of the information about the terms of the end of your marriage or domestic
+    partnership. <br>
+    For ease of serving paperwork, I recommend also filing <a
+      href="https://www.courts.wa.gov/forms/documents/All%20Civil%20006%20Agreement%20re%20Service%20by%20Email.pdf"
+      target="_blank">All
+      Civil 006</a>
+    which is an Email Service Agreement. <br>
+    <img src="img/cattorney2.png">
+  </article>
+  <article>
+    There are a lot of other things that need to be filed with the court in combination with Divorce 201.<br>
+    <a href="https://www.courts.wa.gov/forms/documents/FL%20All%20Family%20135%20Declaration%20-%20blank%202016_05(2).pdf"
+      target="_blank">
+      FL 135 Declaration</a> which is for general statements made that are relavent to the case.
+    <a href="https://www.courts.wa.gov/forms/documents/FL%20All%20Family%20131%20Financial%20Declaration_2016%2009%2026(2).pdf"
+      target="_blank">
+      FL All Family 131</a> which is a financial declaration. It is probably a good idea to also use
+    <a href="https://www.courts.wa.gov/forms/documents/FL%20All%20Family%20011%20Sealed%20Financial%20Source%20Docs%202016_05(2).pdf"
+      target="_blank">
+      FL011 Sealed Financial Documents</a> cover sheet to protect your personal financial information. <br>
+    Everything filed without a cover sheet is a public record that can be requested by anyone. PROTECT YOUR
+    PRIVACY!<br>
+    Other cover sheets that maybe useful are:
+    <a href="https://www.courts.wa.gov/forms/documents/FL%20All%20Family%20013%20Sealed%20Confid%20Report.pdf"
+      target="_blank">
+      FL013 Sealed Confidential Report</a> and
+    <a href="https://www.courts.wa.gov/forms/documents/FL%20All%20Family%20012%20Sealed%20Pers%20Health%20Care%20Records(2).pdf"
+      target="_blank">
+      FL012 Health Care Records</a> <br>
+    <img src="img/catcourt1.png">
+  </article>
+  <article>
+    The most difficult part of divorce or ending a domestic partnership is when there are children involved. There are
+    a number of
+    different things that need to be filed. The first and most important is
+    <a href="https://www.courts.wa.gov/forms/documents/FL%20All%20Family%20140%20Parenting%20Plan_06_2024(2).pdf"
+      target="_blank">FL140
+      a parenting plan</a> this can be modified at a later date with <a
+      href="https://www.courts.wa.gov/forms/documents/FL%20Modify%20601%20Pt%20to%20Change%20Parenting%20Plan%20Custody%20Or_2022%2007%20(2).pdf"
+      target="_blank">
+      FL Modify 601</a>. If the divorce is finalized, you also need to file <a
+      href="https://www.courts.wa.gov/forms/documents/FL%20Modify%20600%20Summons%20to%20Change%20Parenting%20Plan_%202022%2001%20(2).pdf"
+      target="_blank">FL600.</a>
+    Along with the financial declaration, a <a
+      href="https://www.courts.wa.gov/forms/documents/WSCSS_Worksheets2019%2001(02).pdf" target="_blank">
+      child support worksheet</a>
+    needs to be filled out and submitted. This is why it is important to submit as much financial documentation as
+    possible. not just for the division of assets, but to ensure that there is substantiating evidence of what portion
+    is to be paid in case of
+    any dispute that may arise. It is important to note that this ammount can be adjusted via
+    <a href="https://www.courts.wa.gov/forms/documents/FL%20Modify%20501%20Pt%20to%20Modify%20Child%20Support_2022%2001%20(2).pdf"
+      target="_blank">Form
+      FL501.</a>
+    This needs to be filed with
+    <a href="https://www.courts.wa.gov/forms/documents/FL%20Modify%20500%20Smn%20to%20Mod%20Child%20Support_%202022%2001%20(2).pdf"
+      target="_blank">Form
+      FL500.</a> <br>
+    <img src="img/cattorney.png">
+  </article>
+</section>
+<script>
+  function myFunction() {
+    var x = document.getElementById("nav");
+    if (x.style.display === "none") {
+      x.style.display = "block";
+    } else {
+      x.style.display = "none";
     }
-    </script>
-    </html>
+  }
+</script>
+<footer>
+  <br><a href="#">Return to Top</a><br>
+  Author: Sam Henninger 2024 <a href="contact.html" target="_blank">Contact Us</a>
+</footer>
+
+</html>
