--- a/about.html
+++ b/about.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
-
+<!--metadata for the page. there is a callout for where I got the script to make my nav Menu work-->
 <head>
-  <link rel="icon" type="image/x-icon" href="icon.jpg">
+  <link rel="icon" type="image/x-icon" href="img/icon.jpg">
   <link rel="stylesheet" href="css/about.css">
   <title>JSRR</title>
   <script src="https://kit.fontawesome.com/e40d1a93d8.js" crossorigin="anonymous"></script>
 </head>
 <header>
-  <div class="topbar_container">
-    <div class="logo" id="pageTop"> <img src="img/jeff1.png" alt="Jeffery Clawmer"> </div>
+      <!--This is the Header and Navigation menu for the page-->
+      <div class="topbar_container">
+        <!--The logo for the webpage-->
+            <div class="logo" id="pageTop"> <img src="img/jeff1.png" alt="Jeffery Clawmer"> </div>
+        <!--This is calling the JS that allows the menu to collapse at smaller screen sizes-->
     <a class="bar" href="javascript:void(0);" onclick="myFunction()"> <i class="fa fa-bars"></i></a>
     <nav id="nav">
       <ul>
@@ -24,6 +27,7 @@
 
 <body>
   <section>
+    <!--A few pictures of me and Jeff, with a little blurb about me and why I created this site.-->
     <article>
       My name is Sam Henninger, I'm the creator of this site. Along with my associate Mr. Jeffery Clawmer.
       He is the real taskmaster of this operation. He is in charge of meal breaks, making sure I am on time
@@ -41,19 +45,21 @@
       <img src="img/whythewebsite.jpg" alt="">
     </article>
   </section>
-  <script>
-    function myFunction() {
-      var x = document.getElementById("nav");
-      if (x.style.display === "none") {
-        x.style.display = "block";
-      } else {
-        x.style.display = "none";
+    <!--This is the javascript used to make the navbar function-->
+    <script>
+      function myFunction() {
+          var x = document.getElementById("nav");
+          if (x.style.display === "none") {
+              x.style.display = "block";
+          } else {
+              x.style.display = "none";
+          }
       }
-    }
   </script>
 </body>
 <footer>
   <br><a href="#">Return to Top</a><br>
+  <!--A link to the contact page for feedback... maybe-->
   Author: Sam Henninger 2024 <a href="contact.html" target="_blank">Contact Us</a>
 </footer>
 
